blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
spec:
  type: NodePort
  selector:
    app: blue-app
  ports:
    - port: 8080
      targetPort: 8080
