green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-service
spec:
  type: NodePort
  selector:
    app: green-app
  ports:
    - port: 8081
